...
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:text="校区"
            android:gravity="center_horizontal"
            android:id="@+id/campus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:text="时间"
...
